// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when a claim exists renders the In Progress dashboard state 1`] = `
<Fragment>
  <Title>
    Dashboard
  </Title>
  <section
    className="border-bottom border-base-lighter padding-bottom-2 margin-bottom-5"
  >
    <Heading
      level="2"
    >
      Active claims
    </Heading>
    <DashboardClaimCard
      claim={
        Claim {
          "application_id": "mock-claim-id",
          "avg_weekly_hours_worked": null,
          "created_at": null,
          "duration_type": null,
          "employee_ssn": null,
          "first_name": null,
          "hours_off_needed": null,
          "last_name": null,
          "leave_details": Object {
            "continuous_leave_periods": null,
            "employer_notified": null,
          },
          "leave_type": null,
          "middle_name": null,
        }
      }
      key="mock-claim-id"
      number={1}
    />
  </section>
  <Heading
    className="margin-top-3"
    level="2"
  >
    Start a new claim
  </Heading>
  <Heading
    level="3"
  >
    To submit your claim, you will need to provide the following:
  </Heading>
  <ul
    className="usa-list"
  >
    <li>
      Contact information
    </li>
    <li>
      Employment information
    </li>
    <li>
      Why you are taking leave
    </li>
    <li>
      When you are taking leave or planning to take leave
    </li>
    <li>
      Where to send your benefits
    </li>
  </ul>
  <form
    onSubmit={[Function]}
  >
    <Button
      name="new-claim"
      type="submit"
      variation="outline"
    >
      Start a new claim
    </Button>
  </form>
</Fragment>
`;

exports[`Index when no claims exist renders the initial blank dashboard state 1`] = `
<Fragment>
  <Title>
    Dashboard
  </Title>
  <Heading
    className="margin-top-3"
    level="2"
  >
    Start a new claim
  </Heading>
  <Heading
    level="3"
  >
    To submit your claim, you will need to provide the following:
  </Heading>
  <ul
    className="usa-list"
  >
    <li>
      Contact information
    </li>
    <li>
      Employment information
    </li>
    <li>
      Why you are taking leave
    </li>
    <li>
      When you are taking leave or planning to take leave
    </li>
    <li>
      Where to send your benefits
    </li>
  </ul>
  <form
    onSubmit={[Function]}
  >
    <Button
      name="new-claim"
      type="submit"
    >
      Start a new claim
    </Button>
  </form>
</Fragment>
`;
